<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>windrobo_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for WindRobo project</description>
  <maintainer email="oscar@todo.todo">oscar</maintainer>
  <license>TODO: License declaration</license>

  <!-- 🔥 DEPENDENCIAS NECESARIAS -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>windrobo_sim</exec_depend>
  <exec_depend>windrobo_cpp</exec_depend>
  <exec_depend>windrobo_py</exec_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

